Improve death test discovery and filtering
- Fix death-tag parsing in discover_tests for semicolon metadata and names containing bracket markers.

- Add configurable death tags in runner (CLI/env) and align default exclusions with discovery.

- Expand discover_tests fixture to cover bracketed names and death output expectations.

- Update README/headers for new CLI flags and codegen options.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -490,7 +490,9 @@ gentest_add_check_death(
 # CLI checks for VSCode integration
 gentest_add_check_contains(NAME unit_help PROG $<TARGET_FILE:gentest_unit_tests> EXPECT_SUBSTRING gentest ARGS --help)
 gentest_add_check_lines(NAME unit_list_tests_lines PROG $<TARGET_FILE:gentest_unit_tests> LINES 12 ARGS --list-tests)
+gentest_add_check_contains(NAME unit_list_tags_fast PROG $<TARGET_FILE:gentest_unit_tests> EXPECT_SUBSTRING "tags=fast" ARGS --list)
 gentest_add_check_lines(NAME integration_list_tests_lines PROG $<TARGET_FILE:gentest_integration_tests> LINES 4 ARGS --list-tests)
+gentest_add_check_contains(NAME integration_list_tags_owner PROG $<TARGET_FILE:gentest_integration_tests> EXPECT_SUBSTRING "owner=team-runtime" ARGS --list)
 
 gentest_add_check_counts(
     NAME run_test_exact
