Report benchmark fixture allocation failures
Make --run-bench surface fixture allocation errors clearly (exception/unknown/null) and return non-zero when a benchmark fixture cannot be created. Add a benchmarks suite fixture that can be forced to return null via an env var, plus a CTest check that exercises the new error path without breaking normal benchmark runs.

Tests:
- Add benchmarks/fixture/null and benches_fixture_alloc_null check

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -645,6 +645,13 @@ gentest_add_check_contains(
     EXPECT_SUBSTRING benchmarks/string/concat_small
     ARGS --list)
 
+gentest_add_check_death(
+    NAME benches_fixture_alloc_null
+    PROG $<TARGET_FILE:gentest_benchmarks_tests>
+    EXPECT_SUBSTRING "benchmark fixture allocation failed for benchmarks/fixture/null"
+    ENV_VARS GENTEST_BENCH_NULL_FIXTURE=1
+    ARGS --run-bench=benchmarks/fixture/null)
+
 # Jitter: histogram header and suite table header
 gentest_add_check_contains(
     NAME jitter_hist_header
