--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,18 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 include(GentestDependencies)
 gentest_ensure_fmt()
 
+option(COORD_BUILD "Build coordd/coordctl integration test runner" ON)
+option(COORD_ENABLE_TLS "Enable mTLS for coordd TCP endpoints" ON)
+option(COORD_ENABLE_JSON "Enable JSON session specs and manifest output" ON)
+option(COORD_ENABLE_MODE_B "Enable Linux userns + mountns mode" ON)
+option(COORD_ENABLE_MODE_C "Enable Linux userns + netns mode" ON)
+option(COORD_ENABLE_MODE_D "Enable privileged netns/veth/bridge mode" ON)
+
+if(COORD_BUILD)
+    include(CoordDependencies)
+    coord_fetch_dependencies()
+endif()
+
 option(${PROJECT_NAME}_INSTALL "Install ${PROJECT_NAME} configuration" OFF)
 option(${PROJECT_NAME}_BUILD_TESTING "Build the testing tree" ON)
 option(GENTEST_USE_BOOST_JSON "Use Boost.JSON for Allure writer in generated runtime" OFF)
@@ -43,6 +55,15 @@ if(GENTEST_BUILD_CODEGEN)
 endif()
 include(GentestCodegen)
 add_subdirectory(src)
+
+if(COORD_BUILD)
+    add_subdirectory(libcoord)
+    add_subdirectory(coordd)
+    add_subdirectory(coordctl)
+    if(UNIX AND COORD_ENABLE_MODE_D)
+        add_subdirectory(netd-helper)
+    endif()
+endif()
 
 if(${PROJECT_NAME}_INSTALL)
     include(FetchContent)
@@ -95,6 +116,9 @@ if(${PROJECT_NAME}_BUILD_TESTING)
     add_subdirectory(tools/core_tests)
     add_custom_target(gentest_codegen_all)
     add_subdirectory(tests)
+    if(COORD_BUILD)
+        add_subdirectory(examples)
+    endif()
 
     # Compile time benchmark targets
     add_custom_target(bench-compile
