Add coordd runner framework

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,6 +18,11 @@ set(_gentest_test_suites
     ctor
     benchmarks)
 
+# coord suite depends on coord::coord and JSON support
+if(COORD_BUILD AND COORD_ENABLE_JSON)
+    list(APPEND _gentest_test_suites coord)
+endif()
+
 # Optionally include libassert integration suite
 if(GENTEST_WITH_LIBASSERT)
     list(APPEND _gentest_test_suites libassert)
@@ -26,6 +31,10 @@ endif()
 foreach(suite IN LISTS _gentest_test_suites)
     gentest_add_suite(${suite})
 endforeach()
+
+if(TARGET gentest_coord_tests)
+    target_link_libraries(gentest_coord_tests PRIVATE coord::coord)
+endif()
 
 unset(_gentest_test_suites)
 
@@ -395,6 +404,11 @@ gentest_add_check_lines(NAME templates_list_tests_lines PROG $<TARGET_FILE:gente
 
 gentest_add_check_counts(NAME mocking_counts PROG $<TARGET_FILE:gentest_mocking_tests> PASS 26 FAIL 0 SKIP 0)
 gentest_add_check_counts(NAME mocking_list_counts PROG $<TARGET_FILE:gentest_mocking_tests> LIST CASES 26)
+
+if(TARGET gentest_coord_tests)
+    gentest_add_check_counts(NAME coord_counts PROG $<TARGET_FILE:gentest_coord_tests> PASS 2 FAIL 0 SKIP 0)
+    gentest_add_check_counts(NAME coord_list_counts PROG $<TARGET_FILE:gentest_coord_tests> LIST CASES 2)
+endif()
 
 # Runtime skip/xfail/XPASS outcome checks
 set(_gentest_outcomes_runtime_checks
