Add TLS backend abstraction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,10 +28,19 @@ gentest_ensure_fmt()
 
 option(COORD_BUILD "Build coordd/coordctl integration test runner" ON)
 option(COORD_ENABLE_TLS "Enable mTLS for coordd TCP endpoints" ON)
+set(COORD_TLS_BACKEND "openssl" CACHE STRING "TLS backend for coordd (openssl, wolfssl, none)")
+set_property(CACHE COORD_TLS_BACKEND PROPERTY STRINGS openssl wolfssl none)
 option(COORD_ENABLE_JSON "Enable JSON session specs and manifest output" ON)
 option(COORD_ENABLE_MODE_B "Enable Linux userns + mountns mode" ON)
 option(COORD_ENABLE_MODE_C "Enable Linux userns + netns mode" ON)
 option(COORD_ENABLE_MODE_D "Enable privileged netns/veth/bridge mode" ON)
+
+if(NOT COORD_ENABLE_TLS)
+    set(COORD_TLS_BACKEND "none" CACHE STRING "TLS backend for coordd (openssl, wolfssl, none)" FORCE)
+endif()
+if(COORD_ENABLE_TLS AND COORD_TLS_BACKEND STREQUAL "none")
+    message(FATAL_ERROR "COORD_ENABLE_TLS=ON requires COORD_TLS_BACKEND to be openssl or wolfssl")
+endif()
 
 if(COORD_BUILD)
     include(CoordDependencies)
