Refine TLS transport backend

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -406,8 +406,13 @@ gentest_add_check_counts(NAME mocking_counts PROG $<TARGET_FILE:gentest_mocking_
 gentest_add_check_counts(NAME mocking_list_counts PROG $<TARGET_FILE:gentest_mocking_tests> LIST CASES 26)
 
 if(TARGET gentest_coord_tests)
-    gentest_add_check_counts(NAME coord_counts PROG $<TARGET_FILE:gentest_coord_tests> PASS 7 FAIL 0 SKIP 0)
-    gentest_add_check_counts(NAME coord_list_counts PROG $<TARGET_FILE:gentest_coord_tests> LIST CASES 7)
+    set(_coord_expected_count 9)
+    if(WIN32)
+        set(_coord_expected_count 7)
+    endif()
+    gentest_add_check_counts(NAME coord_counts PROG $<TARGET_FILE:gentest_coord_tests> PASS ${_coord_expected_count} FAIL 0 SKIP 0)
+    gentest_add_check_counts(NAME coord_list_counts PROG $<TARGET_FILE:gentest_coord_tests> LIST CASES ${_coord_expected_count})
+    unset(_coord_expected_count)
 endif()
 
 # Runtime skip/xfail/XPASS outcome checks
