Add OpenSSL to CI images

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,9 +42,9 @@ jobs:
         run: |
           brew update
           if [ "${{ matrix.compiler }}" = "llvm@20" ]; then
-            brew install llvm@20 ninja ccache
+            brew install llvm@20 ninja ccache openssl@3
           else
-            brew install llvm ninja ccache
+            brew install llvm ninja ccache openssl@3
           fi
 
       - name: Configure LLVM environment
@@ -59,6 +59,9 @@ jobs:
           if [ "${{ matrix.compiler }}" = "llvm" ] || [ "${{ matrix.compiler }}" = "llvm@20" ]; then
             echo "LLVM_BIN=${LLVM_PREFIX}/bin" >> $GITHUB_ENV
           fi
+          OPENSSL_PREFIX="$(brew --prefix openssl@3)"
+          echo "OPENSSL_ROOT_DIR=${OPENSSL_PREFIX}" >> $GITHUB_ENV
+          echo "OPENSSL_DIR=${OPENSSL_PREFIX}" >> $GITHUB_ENV
 
       - name: Configure environment
         run: |
@@ -88,6 +91,9 @@ jobs:
             "-DCMAKE_CXX_COMPILER=${COMPILER_BIN}/clang++"
             "-DVCPKG_CHAINLOAD_TOOLCHAIN_FILE="
           )
+          if [ -n "${OPENSSL_ROOT_DIR:-}" ]; then
+            CMAKE_ARGS+=("-DOPENSSL_ROOT_DIR=${OPENSSL_ROOT_DIR}")
+          fi
           if [ -n "${LLVM_DIR:-}" ]; then
             CMAKE_ARGS+=("-DLLVM_DIR=${LLVM_DIR}")
             # Also add Clang_DIR to find ClangConfig.cmake
@@ -114,7 +120,7 @@ jobs:
       - name: Install dependencies (Homebrew)
         run: |
           brew update
-          brew install llvm@20 ninja ccache
+          brew install llvm@20 ninja ccache openssl@3
 
       - name: Configure LLVM environment
         run: |
@@ -122,6 +128,9 @@ jobs:
           echo "LLVM_DIR=${LLVM_PREFIX}/lib/cmake/llvm" >> $GITHUB_ENV
           echo "PATH=${LLVM_PREFIX}/bin:$PATH" >> $GITHUB_ENV
           echo "LLVM_BIN=${LLVM_PREFIX}/bin" >> $GITHUB_ENV
+          OPENSSL_PREFIX="$(brew --prefix openssl@3)"
+          echo "OPENSSL_ROOT_DIR=${OPENSSL_PREFIX}" >> $GITHUB_ENV
+          echo "OPENSSL_DIR=${OPENSSL_PREFIX}" >> $GITHUB_ENV
 
       - name: Configure environment
         run: |
@@ -152,6 +161,9 @@ jobs:
             "-DCMAKE_CXX_COMPILER=${COMPILER_BIN}/clang++"
             "-DVCPKG_CHAINLOAD_TOOLCHAIN_FILE="
           )
+          if [ -n "${OPENSSL_ROOT_DIR:-}" ]; then
+            CMAKE_ARGS+=("-DOPENSSL_ROOT_DIR=${OPENSSL_ROOT_DIR}")
+          fi
           if [ -n "${LLVM_DIR:-}" ]; then
             CMAKE_ARGS+=("-DLLVM_DIR=${LLVM_DIR}")
             CLANG_DIR="$(dirname ${LLVM_DIR})/clang"
@@ -236,6 +248,16 @@ jobs:
         with:
           arch: x64
 
+      - name: Install OpenSSL
+        shell: pwsh
+        run: |
+          choco install openssl.light --no-progress
+          $root = "C:\\Program Files\\OpenSSL-Win64"
+          if (-not (Test-Path $root)) { $root = "C:\\Program Files\\OpenSSL-Win32" }
+          if (-not (Test-Path $root)) { throw "OpenSSL install not found" }
+          "OPENSSL_ROOT_DIR=$root" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          "OPENSSL_DIR=$root" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
       - name: Show tool versions
         shell: pwsh
         run: |
@@ -252,7 +274,8 @@ jobs:
             "-DCMAKE_C_COMPILER=$env:LLVM_BIN\\clang.exe",
             "-DCMAKE_CXX_COMPILER=$env:LLVM_BIN\\clang++.exe",
             "-DLLVM_DIR=$env:LLVM_DIR",
-            "-DClang_DIR=$env:Clang_DIR"
+            "-DClang_DIR=$env:Clang_DIR",
+            "-DOPENSSL_ROOT_DIR=$env:OPENSSL_ROOT_DIR"
           )
           if ("${{ matrix.preset }}" -eq "debug-system") {
             $cmakeArgs += "-DGENTEST_SKIP_WINDOWS_DEBUG_DEATH_TESTS=ON"
@@ -348,6 +371,16 @@ jobs:
         with:
           arch: x64
 
+      - name: Install OpenSSL
+        shell: pwsh
+        run: |
+          choco install openssl.light --no-progress
+          $root = "C:\\Program Files\\OpenSSL-Win64"
+          if (-not (Test-Path $root)) { $root = "C:\\Program Files\\OpenSSL-Win32" }
+          if (-not (Test-Path $root)) { throw "OpenSSL install not found" }
+          "OPENSSL_ROOT_DIR=$root" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          "OPENSSL_DIR=$root" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
       - name: Show tool versions
         shell: pwsh
         run: |
@@ -365,7 +398,8 @@ jobs:
             "-DCMAKE_CXX_COMPILER=$env:LLVM_BIN\\clang++.exe",
             "-DGENTEST_SKIP_WINDOWS_DEBUG_DEATH_TESTS=ON",
             "-DLLVM_DIR=$env:LLVM_DIR",
-            "-DClang_DIR=$env:Clang_DIR"
+            "-DClang_DIR=$env:Clang_DIR",
+            "-DOPENSSL_ROOT_DIR=$env:OPENSSL_ROOT_DIR"
           )
           cmake @cmakeArgs
 
@@ -598,6 +632,7 @@ jobs:
             ca-certificates \
             libffi-dev \
             libxml2-dev \
+            libssl-dev \
             zlib1g-dev \
             libzstd-dev \
             libcurl4-openssl-dev \
@@ -639,6 +674,7 @@ jobs:
             libcurl-devel \
             libffi-devel \
             libxml2-devel \
+            openssl-devel \
             gcc \
             gcc-c++ \
             make \
@@ -714,6 +750,7 @@ jobs:
             ca-certificates \
             libffi-dev \
             libxml2-dev \
+            libssl-dev \
             zlib1g-dev \
             libzstd-dev \
             libcurl4-openssl-dev \
