Add OpenSSL to CI images

--- a/.github/workflows/buildsystems_linux.yml
+++ b/.github/workflows/buildsystems_linux.yml
@@ -58,6 +58,7 @@ jobs:
             ca-certificates \
             libffi-dev \
             libxml2-dev \
+            libssl-dev \
             zlib1g-dev \
             libzstd-dev \
             libcurl4-openssl-dev \
@@ -100,6 +101,7 @@ jobs:
             libcurl-devel \
             libffi-devel \
             libxml2-devel \
+            openssl-devel \
             gcc \
             gcc-c++ \
             make \
