Harden Windows OpenSSL discovery

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -252,9 +252,38 @@ jobs:
         shell: pwsh
         run: |
           choco install openssl.light --no-progress
-          $root = "C:\\Program Files\\OpenSSL-Win64"
-          if (-not (Test-Path $root)) { $root = "C:\\Program Files\\OpenSSL-Win32" }
-          if (-not (Test-Path $root)) { throw "OpenSSL install not found" }
+
+          $roots = New-Object System.Collections.Generic.List[string]
+          $roots.AddRange(@(
+            "$env:ProgramFiles\\OpenSSL-Win64",
+            "$env:ProgramFiles\\OpenSSL",
+            "$env:ProgramFiles(x86)\\OpenSSL-Win32",
+            "$env:ProgramFiles(x86)\\OpenSSL"
+          ))
+
+          $regKeys = @(
+            "HKLM:\\SOFTWARE\\OpenSSL-Win64",
+            "HKLM:\\SOFTWARE\\OpenSSL-Win32",
+            "HKLM:\\SOFTWARE\\WOW6432Node\\OpenSSL-Win32",
+            "HKLM:\\SOFTWARE\\OpenSSL"
+          )
+          foreach ($key in $regKeys) {
+            if (Test-Path $key) {
+              $p = (Get-ItemProperty $key).InstallPath
+              if ($p) { $roots.Add($p) }
+            }
+          }
+
+          $openssl = Get-Command openssl.exe -ErrorAction SilentlyContinue
+          if ($openssl) {
+            $bin = Split-Path -Parent $openssl.Source
+            $root = Split-Path -Parent $bin
+            $roots.Add($root)
+          }
+
+          $root = $roots | Where-Object { $_ -and (Test-Path $_) } | Select-Object -First 1
+          if (-not $root) { throw "OpenSSL install not found. Checked: $($roots -join ', ')" }
+
           "OPENSSL_ROOT_DIR=$root" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           "OPENSSL_DIR=$root" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
@@ -375,9 +404,38 @@ jobs:
         shell: pwsh
         run: |
           choco install openssl.light --no-progress
-          $root = "C:\\Program Files\\OpenSSL-Win64"
-          if (-not (Test-Path $root)) { $root = "C:\\Program Files\\OpenSSL-Win32" }
-          if (-not (Test-Path $root)) { throw "OpenSSL install not found" }
+
+          $roots = New-Object System.Collections.Generic.List[string]
+          $roots.AddRange(@(
+            "$env:ProgramFiles\\OpenSSL-Win64",
+            "$env:ProgramFiles\\OpenSSL",
+            "$env:ProgramFiles(x86)\\OpenSSL-Win32",
+            "$env:ProgramFiles(x86)\\OpenSSL"
+          ))
+
+          $regKeys = @(
+            "HKLM:\\SOFTWARE\\OpenSSL-Win64",
+            "HKLM:\\SOFTWARE\\OpenSSL-Win32",
+            "HKLM:\\SOFTWARE\\WOW6432Node\\OpenSSL-Win32",
+            "HKLM:\\SOFTWARE\\OpenSSL"
+          )
+          foreach ($key in $regKeys) {
+            if (Test-Path $key) {
+              $p = (Get-ItemProperty $key).InstallPath
+              if ($p) { $roots.Add($p) }
+            }
+          }
+
+          $openssl = Get-Command openssl.exe -ErrorAction SilentlyContinue
+          if ($openssl) {
+            $bin = Split-Path -Parent $openssl.Source
+            $root = Split-Path -Parent $bin
+            $roots.Add($root)
+          }
+
+          $root = $roots | Where-Object { $_ -and (Test-Path $_) } | Select-Object -First 1
+          if (-not $root) { throw "OpenSSL install not found. Checked: $($roots -join ', ')" }
+
           "OPENSSL_ROOT_DIR=$root" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           "OPENSSL_DIR=$root" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
